# OOPS

WaveEquation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
WaveEquation/MultiGrid/: Makefile
WaveEquation/WaveEquation/: Makefile
WaveEquation/include/: wave.h
WaveEquation/src/: main.cpp  wave.cpp
WaveEquation/tests/: Makefile  cmake_install.cmake
include/: maxwellparser.h  wave.h
maxwell/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
maxwell/MultiGrid/: Makefile
maxwell/WaveEquation/: Makefile  Wave
maxwell/include/: maxwell.h  maxwellparameters.h
maxwell/maxwell/: Makefile  cmake_install.cmake
maxwell/pars/: idfile
maxwell/scripts/: maxwell.json
maxwell/src/: main.cpp  maxwell.cpp  maxwellparser.cpp
maxwell/tests/: Makefile
relfluid/include/: relfluid.h
relfluid/src/: main.cpp  relfluid.cpp
